# testwork_NTPRO

./: .gitignore  CMakeLists.txt  README.md
src/: Common.h  Order.h  User.h  UserBase.h  main.cpp
src/Client/: Client.cpp  Client.h  Helpers.cpp  Helpers.h  auth.cpp  auth.h  main.cpp  trade.cpp  trade.h  trade.ui
src/Client/Auth/: auth.cpp  auth.h  auth.ui  main.cpp
src/ClientOld/: Client.cpp  main.cpp
src/Request/: Request.h
src/Response/: Response.h
src/Server/: Server.cpp  Server.h  main.cpp
